2008-07-20  Andre Klapper  <a9016009@gmx.de>

	* C/evolution.xml: Fixed comments 81 to 120 of bug #438479.
	Synced dialogue vs dialog. Fixed two duplicated IDs.

2008-07-20  Andre Klapper  <a9016009@gmx.de>

	* C/evolution.xml: Fixed comments 61 to 80 of bug #438479.

2008-07-20  Andre Klapper  <a9016009@gmx.de>

	* C/evolution.xml: Fixed comments 41 to 60 of bug #438479.

2008-07-20  Andre Klapper  <a9016009@gmx.de>

	* C/evolution.xml: Fixed comments 21 to 40 of bug #438479.

2008-07-20  Andre Klapper  <a9016009@gmx.de>

	* C/evolution.xml: Replace all "e-mail list" by "message list".
	Fixed comments 1 to 20 of bug #438479.

2008-07-20  Andre Klapper  <a9016009@gmx.de>

	* C/evolution.xml: Remove more wrong whitespaces.

2008-07-20  Andre Klapper  <a9016009@gmx.de>

	* C/evolution.xml: Removed braindead whitespaces, fix duplicated
	whitespaces, fix spellings.

2008-07-05  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es/es.po: Updated Spanish translation 

2008-06-30  Matthew Barnes  <mbarnes@redhat.com>

	* Makefile.am:
	Run xmllint on C/evolution.xml when building with "make check"
	or "make distcheck".  Should hopefully prevent any more invalid
	DocBook syntax from slipping into releases.

	* C/evolution.xml:
	Fix some issues that xmllint caught.

2008-06-27 Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es/es.po: Updated Spanish translation

2008-06-22 Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es/es.po: Updated Spanish translation

2008-06-21  Petr Kovar  <pknbe@volny.cz>

	* cs/cs.po: Updated Czech translation by Jiri Eischmann.

2008-06-20 Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es/es.po: Updated Spanish translation

2008-06-08  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es/es.po: Updated Spanish translation.

2008-06-02  Matthew Barnes  <mbarnes@redhat.com>

	** Re-fixes bug #437579

	* C/evolution.xml: Fix "entity not defined" regressions.

2008-05-23  Jorge Gonzalez  <jorgegonz@svn.gnome.org> 

	* es/es.po: Updated Spansih translation.
