@@ -1,5 +1,10 @@
 2008-07-20  Andre Klapper  <a9016009@gmx.de>
 
+	* C/evolution.xml: Fixed comments 121 to 140 of bug #438479.
+	Use &z-3rdParty; instead of *.
+
+2008-07-20  Andre Klapper  <a9016009@gmx.de>
+
 	* C/evolution.xml: Fixed comments 81 to 120 of bug #438479.
 	Synced dialogue vs dialog. Fixed two duplicated IDs.
 
